Developed cart, user profile, shop pages, logged in page, etc

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -24,6 +24,7 @@
       "@public/*": ["./public/*"],
       "@lib/*": ["./src/lib/*"],
       "@models/*": ["./src/models/*"],
+      "@contexts/*": ["./src/contexts/*"],
     }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
