--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "bcrypt": "^5.1.1",
     "bcryptjs": "^3.0.2",
     "dotenv": "^16.4.7",
+    "lucide-react": "^0.487.0",
     "mongoose": "^8.13.0",
     "next": "15.2.3",
     "react": "^19.0.0",
