--- a/tsconfig.json
+++ b/tsconfig.json
@@ -25,6 +25,7 @@
       "@lib/*": ["./src/lib/*"],
       "@models/*": ["./src/models/*"],
       "@contexts/*": ["./src/contexts/*"],
+      "@providers/*": ["./src/providers/*"],
     }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "src/app/api/auth/[...nextauth]/route.js"],
