--- a/tsconfig.json
+++ b/tsconfig.json
@@ -26,6 +26,7 @@
       "@models/*": ["./src/models/*"],
       "@contexts/*": ["./src/contexts/*"],
       "@providers/*": ["./src/providers/*"],
+      "@server/*": ["./server*"],
     }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "src/app/api/auth/[...nextauth]/route.js"],
