--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "openai": "^4.93.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-icons": "^5.5.0",
     "stripe": "^18.0.0"
   },
   "devDependencies": {
