--- a/tsconfig.json
+++ b/tsconfig.json
@@ -29,6 +29,6 @@
       "@server/*": ["./server*"],
     }
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "src/app/api/auth/[...nextauth]/route.js"],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "src/app/api/auth/[...nextauth]/route.ts"],
   "exclude": ["node_modules"]
 }
